# DeVAIC

./: .gitignore  Cargo.toml  DEPENDENCY_MIGRATION.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  README.md  README_CVE_PATTERN_DISCOVERY.md  USAGE.md  create_large_test.py  devaic.toml  final_performance_report.py  fixed_perf_test.py  impact_demo  package.json  performance_test.py  quick_perf_test.py  run_script.py  test-report.json  test_enhanced.py  test_performance.py  test_recursive_fix.py
.claude/: settings.local.json
deployment/docker/: Dockerfile  docker-compose.yml
deployment/kubernetes/: devaic-deployment.yaml
docs/: ADVANCED_FEATURES.md  COMMUNITY_ENGAGEMENT_STRATEGY.md  COMPILATION_FIXES_SUMMARY.md  COMPREHENSIVE_ACHIEVEMENT_SUMMARY.md  COMPREHENSIVE_ENHANCEMENT_SUMMARY.md  DART_ENHANCEMENT_SUMMARY.md  DEPLOYMENT_GUIDE.md  FINAL_ACHIEVEMENT_REPORT.md  FINAL_STATUS_REPORT.md  FINAL_SUMMARY.md  FUTURE_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  KOTLIN_SWIFT_ENHANCEMENT_SUMMARY.md  MIGRATION_GUIDE.md  ORGANIZATION.md  PERFORMANCE_OPTIMIZATION.md  PRODUCTION_DEPLOYMENT_GUIDE.md  README_UPDATE_SUMMARY.md  RELEASE_ANNOUNCEMENT.md  TEST_SUITE_SUMMARY.md
examples/: adaptive_prioritization_demo.rs  advanced_rule_engine_showcase.rs  advanced_usage.rs  business_logic_demo.rs  cross_language_transfer_demo.rs  cve_pattern_discovery_demo.rs  cwe_all_patterns.yaml  cwe_auth_patterns.yaml  cwe_comprehensive_patterns.yaml  cwe_crypto_patterns.yaml  cwe_injection_patterns.yaml  cwe_memory_safety_patterns.yaml  cwe_top25_patterns.yaml  enterprise_performance_demo.rs  false_positive_reduction_demo.rs  false_positive_simple_demo.rs  flutter_mobile_security_test.dart  flutter_performance_test.dart  flutter_privacy_test.dart  impact_assessment_demo.rs  impact_assessment_simple_demo.rs  incremental_analysis_demo.rs  incremental_analysis_simple_demo.rs  java_patterns.yaml  ml_engine_showcase.rs.disabled  multi_language_showcase.rs  performance_showcase.rs  privacy_test.py  python_patterns.yaml  realtime_analysis_demo.rs  sanitizer_test.c  security_patterns.yaml  security_risks_test.js  semantic_similarity_demo.rs  vulnerability_test.java  vulnerable.cs  vulnerable.dart  vulnerable.go  vulnerable.java  vulnerable.php  (+3 more)
ide_extensions/vscode/: .vscodeignore  TESTING.md  VERIFICATION_RESULTS.md  build.sh  devaic-security-extension.vsix  package-lock.json  package.json
ide_extensions/vscode/src/: codeActionProvider.ts  extension.ts  (+3 more)
reports/: README.md  bearer-analysis.json  test-report.xlsx  test_results.json
rules/: simple-test.yml
rules/custom/: README.md
rules/dependencies/: package-vulnerabilities.yml
rules/infrastructure/: docker-security.yml
scripts/: README.md  build_advanced.sh  build_core.sh  build_working.sh  final_test.sh  quick_fix.sh  run_script.py  test_basic.sh
scripts/performance/: final_performance_report.py  fixed_perf_test.py  performance_test.py  quick_perf_test.py
scripts/testing/: create_large_test.py  test_recursive_fix.py
src/: adaptive_rule_prioritization.rs  analyzer.rs  ast_analyzer.rs  async_scanner.rs  automated_rule_integration.rs  benchmark.rs  build_break.rs  business_logic_analyzer.rs  cache.rs  compliance.rs  config.rs  cross_language_transfer.rs  custom_rules.rs  cve_pattern_discovery.rs  error.rs  false_positive_reduction.rs  fast_walker.rs  ide_integration.rs  ide_integration_stub.rs  impact_assessment.rs  incremental_analysis.rs  intelligent_cache.rs  lib.rs  lib_simple.rs  lsp_server.rs  main.rs  memory_pool.rs  ml_engine.rs  optimized_ast_parser.rs  optimized_reader.rs  optimized_regex.rs  parallel_scanner.rs  pattern_extraction_engine.rs  pattern_loader.rs  pattern_validation_system.rs  performance_monitor.rs  performance_optimizer.rs  progress_reporter.rs  report.rs  security_utils.rs  (+4 more)
src/.claude/: settings.local.json
src/advanced_caching/: cache_analytics.rs  cache_coherency.rs  distributed_cache.rs  memory_aware_cache.rs  mod.rs  predictive_cache.rs  smart_cache_warming.rs
src/parsers/: bash_parser.rs  c_parser.rs  carbon_parser.rs  cobol_parser.rs  cpp_parser.rs  csharp_parser.rs  dart_parser.rs  delphi_parser.rs  go_parser.rs  java_parser.rs  javascript_parser.rs  kotlin_parser.rs  mod.rs  nim_parser.rs  pascal_parser.rs  php_parser.rs  python_parser.rs  ruby_parser.rs  rust_parser.rs  scada_parser.rs  swift_parser.rs  typescript_parser.rs  v_parser.rs  wasm_parser.rs  zig_parser.rs
src/performance/: ai_performance_optimizer.rs  enterprise_benchmarks.rs  memory_profiler.rs  mod.rs  scalability_analyzer.rs
src/rules/: advanced_rule_engine.rs  astro_rules.rs  bash_rules.rs  c_rules.rs  carbon_rules.rs  cobol_rules.rs  cpp_rules.rs  csharp_rules.rs  custom_pattern_rules.rs  dart_rules.rs  delphi_rules.rs  dependency_scanner_rules.rs  go_rules.rs  java_rules.rs  javascript_rules.rs  kotlin_rules.rs  mod.rs  nim_rules.rs  owasp_llm_rules.rs  owasp_web_rules.rs  pascal_rules.rs  php_rules.rs  privacy_rules.rs  python_rules.rs  ruby_rules.rs  rust_rules.rs  sanitizer_rules.rs  scada_rules.rs  security_risk_rules.rs  svelte_rules.rs  swift_rules.rs  typescript_rules.rs  v_rules.rs  vulnerability_scanner_rules.rs  wasm_rules.rs  zig_rules.rs
src/semgrep/: autofix.rs  engine.rs  matcher.rs  metavariable.rs  mod.rs  output.rs  pattern.rs  rule.rs
test_files/: owasp_test.py  test.vue  test_owasp_llm.py  test_owasp_web.py  vulnerable.java  vulnerable.py  vulnerable_js_test.js  vulnerable_ts_test.ts
test_files/nested/: nested.c  nested.py
test_suite/: README.md
test_suite/samples/: vulnerable.astro  vulnerable.c  vulnerable.carbon  vulnerable.cpp  vulnerable.js  vulnerable.kt  vulnerable.nim  vulnerable.pas  vulnerable.py  vulnerable.rb  vulnerable.sl  vulnerable.svelte  vulnerable.tsx  vulnerable.v  vulnerable.wat  vulnerable.zig
test_suite/unit/: advanced_features_test.rs  integration_test.rs
test_suite/vscode_extension/: vulnerable_sample.py
tests/: README.md  advanced_features_test.rs  ai_systems_test.rs  integration_test.rs
tests/fixtures/: simple_owasp_test.py  test_eval.js
tests/samples/: test_java_vulnerable.java
(+139 files in other folders)
